# lakatotree

./: .coveragerc  .gitignore  .importlinter  ADVERSARIAL.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  HARNESS.md  LINEAGE.md  NOTICE  README.md  SECURITY.md  THEORY.md  TOUCH_THE_SKY.md  longinus_bindings.html  pyproject.toml  requirements-dev.txt  requirements-integration.txt  requirements.txt  run_mcp.sh  server.json
.github/: PULL_REQUEST_TEMPLATE.md
REVIEWS/: EXTERNAL_REVIEW_2026-06-18.md  EXTERNAL_REVIEW_2026-07-24.md
_vendor/: ooptdd_vendor_manifest.json  test_ooptdd_vendor_drift.py
c1verify/: README.md  __init__.py  _cert.py  _decision.py  _ed25519.py  core.py  jcs.py  judge.py  pyproject.toml  receipts.py
c1verify/gates/: __init__.py  calibrated.py  grounded.py  preregistered.py  reproducible.py  stands.py  substrate.py  temporal.py
c1verify/tests/: __init__.py  test_failclosed.py  test_grounded.py  test_preregistered.py  test_reproducible.py  test_substrate.py
docs/: ABSORPTION_PLAN_EXTAUDIT_2026-07-22.md  ADR-measurement-sovereignty-20260703.md  ADR-sync-same-db-20260703.md  BPC_PRISMV2_LONGINUS_20260612.md  C3_EFFECTIVENESS_PROTOCOL.md  CONSUMING_LAKATOTREE.md  DESIGN_AUDIT_PROM_20260625.md  ENGINE_DEVELOPMENT_KNOWLEDGE.md  EUREKA.md  EVIDENCE_RECORD.md  HSWM_AGENT_NETWORK.md  HSWM_RESEARCH_PROGRAMME.md  LONGINUS_SELF_VERIFICATION_HELP_20260624.md  OOPTDD_EFFICACY_PROGRAMME_20260723.md  OOPTDD_R3_RECONCILE_HANDOFF_20260616.md  OPS_SERVER_START_HANDOFF.md  PIDNA.md  PIDNA_STRANDS.md  PROM_MEASUREMENT_AUDIT_20260624.md  QUANTITATIVE_GROUNDING.md  REFERENCE_COMPARISON.md  RUNTIME_LEAN_PROM_20260626.md  UI_AND_HUMAN_LOOP.md  bpc_prismv2_longinus_manifest.json  engine_rule_floor.json  fsck_skiplist.json  hswm_related_work.json  lakato-evidence-record-v1.md  longinus_bindings.json  meaning_units.json  semantic_surface.json
examples/: _evidence.py  audit_20260627_programme.py  bhgman_tool_programme.py  bpc_icp_programme.py  c1_external_verifier_20260708_programme.py  c3_effectiveness_corpus.py  cert_foundation_gate_20260708_programme.py  coverage_status_20260714_programme.py  design_audit_20260625_programme.py  engine_mastery_dgx_programme.py  euler_polyhedron_programme.py  external_bind_auth_20260714_programme.py  frontier_fix_20260626_programme.py  git_absorption_20260702_programme.py  ice_orca_dragon_programme.py  judge_proprioception_20260708_programme.py  judgment_trust_20260714_programme.py  lakatotree_selfdev_programme.py  longinus_dashboard.py  measurement_sovereignty_20260703_programme.py  migrate_record.py  omd_adoption_friction_20260702_programme.py  omd_engine_20260702_programme.py  omd_parallel_20260627_programme.py  ooptdd_efficacy_20260723_programme.py  parallel_agent_coding_field_20260627_programme.py  prom_honesty_programme.py  record_judge.py  runtime_lean_20260626_programme.py  verdict_provenance_gate_programme.py
formal/: .gitignore  Pidna.lean  lake-manifest.json  lakefile.toml
judges/: ag1_rsov0_doc_honesty.py  ag2_rsov1_replay_rce.py  ag3_rsov3_value_ownership.py  ag4_rsov4_reproducibility_ceiling.py  ag5_rsov5_attested_grade.py  ag5b_rsov5_verb_signed_irreversible.py  ag6_rsov6_value_integrity_fsck.py  bpc_loo_p95.py  bpc_prismv2_manifest_contracts.py  count_tests.sh  de1_godmethod_split.py  engine_unify_vocab.py  engine_unify_vocab_novel.py  extaudit_abandon_wire.py  extaudit_abandon_wire_novel.py  extaudit_c1verify_temporal.py  extaudit_c1verify_temporal_novel.py  extaudit_comment_seal.py  extaudit_comment_seal_novel.py  extaudit_grade_gate.py  extaudit_grade_gate_novel.py  extaudit_live_wiring.py  extaudit_live_wiring_novel.py  extaudit_measurement_lock.py  extaudit_probe_scorer.py  extaudit_replay_default.py  extaudit_replay_default_novel.py  extaudit_role_layout.py  extaudit_role_layout_novel.py  extaudit_temporal.py  extaudit_temporal_novel.py  extaudit_temporal_witness_live.py  extaudit_temporal_witness_live_novel.py  extaudit_val.py  extaudit_val_novel.py  extaudit_val_surfaces.py  extaudit_val_surfaces_novel.py  extaudit_witness_quorum.py  extaudit_witness_quorum_novel.py  fe5_auth_posture.py  (+3 more)
lakatos/: __init__.py  adapters.py  agm.py  assurance.py  bayes.py  calibrate.py  certify.py  claim.py  cli.py  coverage.py  engine.py  engine_identity.py  envfp.py  eureka.py  explore.py  facts.py  fertility.py  grounding.py  harness.py  harness_run.py  heuristic.py  judge.py  kuhn.py  laudan.py  layout.py  leaderboard.py  lifecycle.py  lineage.py  longinus.py  longinus_dashboard.py  marquez_sink.py  mcp_server.py  measurement_lock.py  metrics.py  multiplicity.py  node_state.py  ontology.py  oo_sink.py  oo_verify.py  pnr.py  (+13 more)
ooptdd_receipts/: README.md  run_all.py
results/: c1s3_prediction_receipt_result.json  go1_replay_dogfood_result.json  jp1_result.txt  jp2_result.txt  jp3_result.txt  jp4_result.txt  jp5_result.txt  jp6_result.txt  jp7_cert_foundation_gate_result.txt  jp_harness_run_20260710.txt
scripts/: coverage_kernel.sh  dev_server_restart.sh  extract_git_callers.py  fix_harness.sh  fix_loop.py  gen_quantitative_grounding.py  judge_c1s3_prediction_receipt.py  judge_go1_replay_dogfood.py  migrate_open_question_tree_scope_20260723.cypher  mutation_kernel.sh  oo_positive_verify.py  probe_temporal_witness_live.py  sync_lakatos_programme_to_kg.py  sync_longinus_bindings_to_kg.py
server/: __init__.py  api_schemas.py  app.py  auth_posture.py  composition.py  container.py  dashboard_view.py  deps.py  engine_freshness.py  file_hashing.py  graph_view.py  maintenance.py  ports.py  read_models.py  run.sh  run_internal.sh  schema.sql  settings.py  shell.py  version.py
tests/: conftest.py  test_a2_eigentrust_server.py  test_adapters.py  test_add_node_missing_tree_404.py  test_agm.py  test_agm_stateful.py  test_agm_wire.py  test_argue.py  test_attribution_gap4.py  test_audit_fix_programme.py  test_b1_dialectic_verdicts.py  test_bayes.py  test_bpc_prismv2_longinus_manifest.py  test_c3_effectiveness.py  test_calibrate.py  test_cert_foundation_gate.py  test_certify.py  test_claim_standing.py  test_cli.py  test_compose.py  (+223 more)
(+265 files in other folders)
